# wisdom

./: Readme.md
client/src/: cli.rs  lib.rs  main.rs
common/src/: challenge.rs  command.rs
dockerfiles/client/: Dockerfile
dockerfiles/server/: Dockerfile
server/src/: main.rs  state.rs
wisdom/: Readme.md
wisdom/client/src/: lib.rs  main.rs
wisdom/common/: Cargo.toml
wisdom/common/src/: challenge.rs
wisdom/dockerfiles/server/: Dockerfile
wisdom/server/src/: cli.rs  db.rs  lib.rs  main.rs  state.rs
wisdom_server_pow/client/: Cargo.toml
wisdom_server_pow/client/src/: cli.rs  lib.rs  main.rs
wisdom_server_pow/common/: Cargo.toml
wisdom_server_pow/common/src/: command.rs  lib.rs
wisdom_server_pow/server/: Cargo.toml  words_of_wisdom.txt
wisdom_server_pow/server/src/: challenge.rs  cli.rs  db.rs  lib.rs  main.rs  state.rs
