[package]
name = "client"
version = "0.1.0"
edition = "2018"
authors = ["pkornecki@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
text_io = "0.1.9"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.7"
tokio-util = { version = "0.6.8", features = ["full"] }
