[package]
name = "server"
version = "0.1.0"
edition = "2018"
authors = ["pkornecki@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.17" }
simple-error = { version = "0.2.3" }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.7" }
tokio-util = { version = "0.6.8", features = ["full"] }
