[package]
name = "server"
version = "0.1.0"
edition = "2018"
authors = ["pkornecki@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
futures = "0.3.17"
rand = "0.8.4"
sha1 = "0.6.0"
simple-error = "0.2.3"
structopt = "0.3.23"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.7"
tokio-util = { version = "0.6.8", features = ["full"] }
